legacy/differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr17301-2.c-5.4.0-2.out.txt
pr17301-2.c: In function ‘foo’:
pr17301-2.c:7:3: error: too few arguments to function ‘__builtin_va_start’
   __builtin_va_start ();  
   ^
